--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .btn {
     text-decoration: none;
     display: inline-block;
@@ -19,7 +17,7 @@
     transition: 0.7s;
 }
 
-.container-Background{
+.container-Background {
     background: url(/images/hero_image_01.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -35,10 +33,10 @@
     top: 0;
     left: 0;
     background-color: #47ea4e;
-    width: 285px;
+    width: 270px;
     display: inline-block;
     z-index: 98;
-    height: 130px;
+    height: 115px;
 }
 
 .page-title-holder:after {
@@ -46,18 +44,19 @@
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 130px 60px 0 0;
+    border-width: 115px 45px 0 0;
     border-color: #47ea4e transparent transparent transparent;
     position: absolute;
     top: 0;
     right: 0;
     transform: translateX(100%);
 }
+
 /* .carousel-item {
     min-height: 280px;
 } */
 
-.carousel-control-prev{
+.carousel-control-prev {
     /* background-color: #47ea4e; */
     /* margin-top:250px !important; */
 }
@@ -74,6 +73,18 @@
     align-content: center;
 }
 
+.Image-Hover {
+    width: 100%;
+}
 
+.Image-Hover img {
+        transition: 0.2s;
+    width: 100%;
+}
 
-
+.Image-Hover img:hover {
+    transform: scale(1.1);
+    transition: 0.35s;
+    opacity: 0.8;
+    cursor: pointer;
+}
