--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+/* .doc-loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background-color: #000;
+}
+
+.doc-loader img {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
+
 .btn {
     text-decoration: none;
     display: inline-block;
@@ -167,33 +186,14 @@
     opacity: 1;
 }
 
-
-
-
-.right {
-    margin: 0% 2% 0% 0%;
-    width: 50%;
-    border-radius: 10px;
-    margin-left: -200px;
-    background-color: #cadbed;
-    transition: 0.5s;
-}
-
-.right:hover {
-    transform: scale(1.05);
-    transition: 0.5s;
-    cursor: pointer;
-}
-
-
-
+/* TEAM SECTION */
 
 .member-info {
     background-color: #fff;
-    padding: 80px 80px;
+    /* padding: 80px 80px; */
     display: inline-block;
     vertical-align: middle;
-    margin-top: 460px;
+    margin-top: 360px;
     margin-left: -130px;
     text-align: left;
     position: relative;
@@ -213,13 +213,186 @@
 }
 
 
-.Social {
+.member-Social {
     text-align: center;
 }
 
-.Social a {
-    color: white;
+.member-Social a {
+    color: rgb(237, 237, 237);
     display: inline-block;
     font-size: 25px;
 
 }
+
+.member-Social a:hover {
+    color: var(--Secondary-color);
+    transition: 0.5s;
+}
+
+
+/* SKILL SECTION */
+.skills-holder {
+    position: relative;
+    margin: 40px 0;
+}
+
+/* .skill-holder:after {
+    clear: both;
+    display: block;
+    content: "";
+} */
+
+.skill-percent {
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 100%;
+    display: inline-block;
+    vertical-align: text-top;
+}
+
+.skill {
+    width: 100%;
+    height: 3px;
+    background-color: rgba(202, 202, 202, 0.3);
+    margin-bottom: 30px;
+}
+
+.skill-text {
+    display: inline-block;
+    width: calc(100% - 145px);
+    margin-right: 0;
+    float: right;
+    vertical-align: text-top;
+}
+
+.skill-fill {
+    border-radius: 10px;
+    width: 100%;
+    height: 10px;
+    background-color: #000;
+}
+
+.skill-text span {
+    font-size: 20px;
+    line-height: 35px;
+}
+
+
+
+.milestone-num h1 {
+    font-size: 80px;
+    line-height: 100%;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 0;
+    color: #000000;
+    text-shadow: -1px 0 #b3b3b3,
+        0 1px #b3b3b3,
+        1px 0 #b3b3b3,
+        0 -1px #b3b3b3;
+}
+
+
+
+
+
+/* ===================================
+    15. Contact Section CSS
+====================================== */
+
+.contact-form {
+    max-width: 100%;
+    margin: 0 auto;
+    font-size: 22px;
+    color: #000;
+}
+
+.contact-form p {
+    margin-bottom: 0 !important;
+}
+
+.contact-form input[type=text],
+.contact-form input[type=email],
+.contact-form textarea {
+    font-family: 'Poppins-Regular';
+    font-weight: 500;
+    border: 0;
+    font-size: 15px;
+    padding: 5px 0;
+    width: 100%;
+    line-height: 25px;
+    color: #000;
+    margin-bottom: 35px;
+    text-indent: 10px;
+    background-color: transparent;
+    border-bottom: 3px solid;
+}
+
+.contact-form textarea {
+    height: 150px;
+}
+
+.contact-form input[type=text]::placeholder,
+.contact-form input[type=email]::placeholder,
+.contact-form textarea::placeholder {
+    font-family: 'Poppins-Regular';
+    color: #000;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 25px;
+    opacity: 1;
+}
+
+.contact-form input[type=text]:ms-input-placeholder,
+.contact-form input[type=email]:ms-input-placeholder,
+.contact-form textarea:ms-input-placeholder {
+    font-family: 'Poppins-Regular';
+    color: #000;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 25px;
+}
+
+.contact-form input[type=text]::ms-input-placeholder,
+.contact-form input[type=email]::ms-input-placeholder,
+.contact-form textarea::ms-input-placeholder {
+        font-family: 'Poppins-Regular';
+    color: #000;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 25px;
+}
+/* 
+.contact-form input[name="your-name"] {
+    margin-top: 0;
+} */
+
+/* .contact-submit-holder {
+    position: relative;
+    margin-bottom: 25px;
+} */
+/* 
+.contact-form input[type=submit] {
+    color: #fff;
+    background-color: #47ea4e;
+    text-align: center;
+    padding: 10px 40px;
+    cursor: pointer;
+    vertical-align: middle;
+    text-decoration: none;
+    transition: all .2s linear;
+    margin-bottom: 17px;
+    display: block;
+    width: 100%;
+    line-height: 35px;
+    border: 2px solid #47ea4e;
+    border-radius: 50px;
+    font-size: 14px;
+    letter-spacing: 2px;
+    box-sizing: border-box;
+}
+
+.contact-form input[type=submit]:hover {
+    background-color: #fff;
+    color: #47ea4e;
+} */
