--- a/Basic-Style.css
+++ b/Basic-Style.css
@@ -6,9 +6,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+html {
     scroll-behavior: smooth;
 }
-
 :root {
     --Primary-color: #47ea4e;
     --Secondary-color: white;
