--- a/Basic-Style.css
+++ b/Basic-Style.css
@@ -1,12 +1,13 @@
-@font-face {
-    src: url(/Font/Poppins-Regular.ttf);
-    font-family: 'Poppins-Regular';
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: 'Cabin', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 html {
     scroll-behavior: smooth;
 }
@@ -36,34 +37,34 @@ a {
 }
 
 p {
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
     font-size: var(--P-font-size);
     color: var(--ternory-color);
 }
 
 h1 {
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
     font-weight: 900;
     font-size: var(--h1-font-size);
     letter-spacing: 1.6px;
 }
 
 h2 {
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
     font-weight: 900;
     font-size: var(--h2-font-size);
     letter-spacing: 1.4px;
 }
 
 h3 {
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
     font-weight: bolder;
     font-size: var(--h3-font-size);
     letter-spacing: 1.2px;
 }
 
 h4 {
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
     font-weight: bolder;
     font-size: var(--h4-font-size);
     letter-spacing: 1.2px;
@@ -72,7 +73,7 @@ h4 {
 body {
     overflow-x: hidden;
     overflow-y: auto;
-    font-family: 'Poppins-Regular';
+    font-family: 'Cabin', sans-serif;
 }
 
 
